[tool.poetry]
name = "pomo"
version = "0.1.0"
description = "poetry usage demo"
authors = ["Jerry Lee <oldratlee@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6.11"


[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
priority = "default"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
