[tool.poetry]
name = "pytound"
version = "0.1.0"
description = "python tools using playground"
authors = ["Jerry Lee <oldratlee@gmail.com>"]
license = "Apache-2.0 license"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.8"

requests = "^2.27.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
hypothesis = "^6.88.1"

mypy = "^1.6.1"
flake8 = "^6.1.0"
isort = "^5.12.0"
black = "^23.10.1"


[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
priority = "default"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
